Fixed incorrect spacing in posts archive

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -10,8 +10,7 @@
 }
 
 .posts-archive {
-  padding: 0 0;
-  margin: 1%;
+  padding: 0 1%;
   list-style: none;
 }
 
